@@ -220,7 +220,10 @@ Removed newlines and spaces from beginnings and ends of text enclosed by font ta
       $TEXT = preg_replace_callback(
        '#(code|file)\>\s*.*?\n?\|#ms',
        function($matches) {         
-         return  str_replace("\\", "",$matches[0]);              
+         $matches[0] = preg_replace("/([\w\:])\\\\(\w)/ms","$1@#@$2",$matches[0]); //retain backslashes inside code blocks
+         $matches[0] = preg_replace("/(\w+)\\\\/ms","$1@#@",$matches[0]);
+         $matches[0] =  str_replace("\\", "",$matches[0]);              
+         return str_replace("@#@", "\\",$matches[0]);              
       },
       $TEXT     
       );
