@@ -1,7 +1,7 @@
 base  ckgdoku
 author  Myron Turner
 email  turnermm02@shaw.ca
-date 2017-10-24
+date 2017-10-26
 name  ckgdoku
 desc  WYSIWYG plugin for Dokuwiki
 url  https://www.dokuwiki.org/plugin:ckgdoku
