@@ -1,4 +1,4 @@
-rev_17-Oct_24-06_56
+rev_17-Oct_26-18_52
 
 Switched dafault filebrowser settings to all and ckgedit
 
@@ -140,3 +140,6 @@ Insure namespace template data is saved when there has been no activity in edito
 
 Oct 24
 Fixes broken table when cell has pipe in nowiki
+
+Oct 26
+Adds back in backslashes when code/file blocks are filtered for extra final line-feeds in tables
